progress to challenge 2

--- a/exercise_files/Ch01/01_Challenge/tsconfig.json
+++ b/exercise_files/Ch01/01_Challenge/tsconfig.json
@@ -4,7 +4,7 @@
         "checkJs": true,
         "outDir": "build",
         "target": "esnext",
-        "noEmit": true
+        // "noEmit": true
     },
-    "include": ["src/**/*"]
+    "include": ["**.ts"]
 }
